Removed tailwindcss package Edited vite.config.js to enable scss input

--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -1,3 +1,7 @@
 tree:
   -
     entry: home
+  -
+    entry: a6dad553-e20f-4931-902c-f6a2fb87939d
+  -
+    entry: 98f36d69-2975-4918-8854-1e5d691a51ca
