--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -12,6 +12,15 @@ database:
 use_dns_when_possible: true
 composer_version: "2"
 web_environment: []
+web_extra_exposed_ports:
+  - name: node-vite
+    container_port: 5173
+    http_port: 5172
+    https_port: 5173
+
+hooks:
+  post-start:
+    - exec: "npm run dev -- --host"
 
 # Key features of DDEV's config.yaml:
 
